--- a/db/docker-compose.yml
+++ b/db/docker-compose.yml
@@ -4,6 +4,8 @@
 services:
   db:
     image: postgres:9
+    volumes:
+      - pg_data:/data/pg
   web:
     build: .
     command: python3 manage.py runserver 0.0.0.0:5000
@@ -13,3 +15,7 @@ services:
       - "5000:5000"
     depends_on:
       - db
+
+volumes:
+  redis_data:
+  pg_data:
